# stapel-shop

./: CHANGELOG.md  CONFIG.MD  MODULE.md  README.md  __init__.py  apps.py  conftest.py  models.py  preset.py  projections.py  pyproject.toml
.github/workflows/: publish.yml
docs/: capabilities.json
migrations/: 0001_initial.py
tests/: test_composite.py
