[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-shop"
version = "0.1.0"
description = "Composite: catalog shop — categories + attributes + listings + reviews, with cross-domain glue projections"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "shop", "composite", "marketplace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# A composite introduces NO versions of its own — it pins the same ranges the
# STAPEL_LIBS registry / each member lib already uses, fixing the combination.
dependencies = [
    "stapel-core>=0.10,<0.11",
    "stapel-categories>=0.4,<0.5",
    "stapel-attributes>=0.3,<0.4",
    "stapel-listings>=0.3,<0.4",
    "stapel-reviews>=0.1,<0.2",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-shop"
Repository = "https://github.com/usestapel/stapel-shop"
Documentation = "https://github.com/usestapel/stapel-shop#readme"
Changelog = "https://github.com/usestapel/stapel-shop/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-shop/issues"

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_shop" = "."}
packages = ["stapel_shop", "stapel_shop.migrations", "stapel_shop.tests"]

[tool.setuptools.package-data]
stapel_shop = ["py.typed", "migrations/*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
